site design update

--- a/mainapp/templates/base.html
+++ b/mainapp/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>{%block title %}{% endblock %}Kay Bootstrap,Kay Framework x Bootstrap</title>
+        <title>{%block title %}{% endblock %}22foot</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="{%block description %}{% endblock %}">
         {% if page and page.first_image %}<meta property="og:image" content="{{page.first_image}}" />{% endif %}
@@ -34,7 +34,7 @@
         #}
     </head>
     <body>
-        <div class="navbar navbar-default navbar-fixed-top">
+        <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -42,7 +42,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">KayBootstrap</a>
+                    <a class="navbar-brand" href="/">22foot</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     {#
@@ -106,9 +106,7 @@
                     </p>
                 </div>
                 <p>
-                    &copy; Company 2013
-                    &middot;<a href="/about/">{{_('About')}}</a>
-                    &middot;<a href="/contact/">{{_('Contact')}}</a>
+                    &copy; 22foot Project, since 2014
                 </p>
             </div>
         </footer>
