--- a/vapp/templates/index.html
+++ b/vapp/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "mainapp/base.html"%}
-{% block title %}{% endblock %}
+{% block title %}Jリーグ移籍市場をd3.jsでビジュアル化 2013-2014シーズン:{% endblock %}
 {% block description %}{% endblock %}
 {% block content %}
 
@@ -25,8 +25,12 @@
   stroke-opacity: .5;
 }
 </style>
-
-<p id="chart"></p>
+<h1 class="featurette-heading">Jリーグ移籍市場をd3.jsでビジュアル化
+    <span class="text-muted">2013-2014シーズン</span>
+</h1>
+<div class="row" style="height:950px">
+    <p id="chart"></p>
+</div>
 
 {% endblock %}
 {%block scripts%}
