--- a/vapp/templates/index.html
+++ b/vapp/templates/index.html
@@ -156,9 +156,10 @@ function drawChart(){
       .on("drag", dragmove));*/
 
     node.append("rect")
-      .attr("height", function(d) { return d.dy; })
+      .attr("height", function(d) { console.log(d);return d.dy; })
       .attr("width", sankey.nodeWidth())
-      .style("fill", function(d) { return d.color = color(d.name.replace(/ .*/, "")); })
+      //.style("fill", function(d) { return d.color = color(d.name.replace(/ .*/, "")); })
+      .style("fill", function(d) { return d.color; })
       .style("stroke", function(d) { return d3.rgb(d.color).darker(2); })
     .append("title")
       .text(function(d) { return d.name + " " + format(d.value); });
