--- a/vapp/templates/index.html
+++ b/vapp/templates/index.html
@@ -156,7 +156,7 @@ function drawChart(){
       .on("drag", dragmove));*/
 
     node.append("rect")
-      .attr("height", function(d) { console.log(d);return d.dy; })
+      .attr("height", function(d) { return d.dy; })
       .attr("width", sankey.nodeWidth())
       //.style("fill", function(d) { return d.color = color(d.name.replace(/ .*/, "")); })
       .style("fill", function(d) { return d.color; })
@@ -170,7 +170,13 @@ function drawChart(){
       .attr("dy", ".35em")
       .attr("text-anchor", "end")
       .attr("transform", null)
-      .text(function(d) { return d.name; })
+      .text(function(d) {
+          if(typeof d.base_value !== 'undefined'){
+              return d.name+'('+format(d.value)+')'; 
+          }else{
+              return '('+format(d.value)+')'+d.name; 
+          }
+      })
     .filter(function(d) { return d.x < width / 2; })
       .attr("x", 6 + sankey.nodeWidth())
       .attr("text-anchor", "start");
