--- a/vapp/templates/index.html
+++ b/vapp/templates/index.html
@@ -31,17 +31,22 @@
     <form class="form-inline" role="form">
         <div class="form-group col-md-2">
             <label for="finisher_ratio" class="control-label">得点者比率(%)</label>
-            <input type="number" class="form-control" id="finisher_ratio" placeholder="%" value="80">
+            <input type="number" min="0" max="100" class="form-control" id="finisher_ratio" placeholder="%" value="80">
+        </div>
+        <div class="form-group col-md-2">
+            <label for="gk_ratio" class="control-label">GK貢献度(%)</label>
+            <input type="number" min="0" max="100" class="form-control" id="gk_ratio" placeholder="%" value="100">
         </div>
         <div class="form-group col-md-2">
             <label for="j2_player" class="control-label">J2期待値(%)</label>
-            <input type="number" class="form-control" id="j2_player" placeholder="%" value="33">
+            <input type="number" min="0" max="100" class="form-control" id="j2_player" placeholder="%" value="33">
         </div>
         <div class="form-group col-md-2">
             <label for="from_oversea" class="control-label">海外→加入期待値</label>
-            <input type="number" class="form-control" id="from_oversea" placeholder="" value="2">
+            <input type="number" min="0" max="30" class="form-control" id="from_oversea" placeholder="" value="2">
         </div>
-        <span class="btn btn-default" id="redraw">再描画</span>
+        <span class="btn btn-info" id="redraw">再描画</span>
+        <span class="btn btn-default" id="set-default">デフォルトに戻す</span>
     </form>
 </div>
 <div class="row">
@@ -65,11 +70,10 @@
 //parameters init
 var new_season_id = 19;
 var gk_defence_ratio = 1.417;
-var finisher_ratio = 0.8;
-var from_high_school = 0.5;
-var from_univ = 0.8;
-var from_oversea = 2;
-var j2_player = 0.33;
+var finisher_ratio_default = 80;
+var gk_ratio_default = 100;
+var from_oversea_default = 2;
+var j2_player_default = 33;
 
 var margin = {top: 1, right: 1, bottom: 6, left: 1},
     width = 630 - margin.left - margin.right,
@@ -92,13 +96,24 @@ $(document).ready(function() {
     $.each(hashVars,function(i,val){
         var hashKeyAndValue = val.split('=');
         if(hashKeyAndValue[0] === 'finisher_ratio'){
-            $('#finisher_ratio').val(hashKeyAndValue[1]);
+            if(typeof parseInt(hashKeyAndValue[1])==='number'){
+                $('#finisher_ratio').val(hashKeyAndValue[1]);
+            }
         }
         if(hashKeyAndValue[0] === 'j2_player'){
-            $('#j2_player').val(hashKeyAndValue[1]);
+            if(typeof parseInt(hashKeyAndValue[1])==='number'){
+                $('#j2_player').val(hashKeyAndValue[1]);
+            }
         }
         if(hashKeyAndValue[0] === 'from_oversea'){
-            $('#from_oversea').val(hashKeyAndValue[1]);
+            if(typeof parseInt(hashKeyAndValue[1])==='number'){
+                $('#from_oversea').val(hashKeyAndValue[1]);
+            }
+        }
+        if(hashKeyAndValue[0] === 'gk_ratio'){
+            if(typeof parseInt(hashKeyAndValue[1])==='number'){
+                $('#gk_ratio').val(hashKeyAndValue[1]);
+            }
         }
     });
     
@@ -116,8 +131,21 @@ function setChartData(){
     var nodes_dic = {};
     var result = trades.data;
     var finisher_ratio = parseInt($("#finisher_ratio").val()) / 100;
+    if((finisher_ratio == NaN)||(finisher_ratio > 1.0)){
+        $("#finisher_ratio").val(finisher_ratio_default);
+    }
+    var gk_ratio = parseInt($("#gk_ratio").val()) / 100;
+    if((gk_ratio == NaN)||(gk_ratio > 1.0)){
+        $("#gk_ratio").val(gk_ratio_default);
+    }
     var j2_player = parseInt($("#j2_player").val()) / 100;
-    var from_oversea = parseInt($("#from_oversea").val()); 
+    if((j2_player == NaN)||(j2_player > 1.0)){
+        $("#j2_player").val(j2_player_default);
+    }
+    var from_oversea = parseInt($("#from_oversea").val());
+    if((from_oversea == NaN)||(from_oversea > 30)){
+        $("#from_oversea").val(from_oversea_default);
+    }
     $.each(result.nodes,function(i,val){
         if(typeof val.base_value !== 'undefined'){
             nodes_dic[val.name] = {'base_value':val.base_value,'id':val.id};
@@ -131,6 +159,7 @@ function setChartData(){
             if(val.j_class == 'J2'){
                 val.value = val.value * j2_player;
             }
+            val.value = val.value * gk_ratio;
             links.push(val);
         }else{
             //todo j2選手の処理
@@ -168,7 +197,10 @@ function setChartData(){
     trades.links = links;
     //console.log(trades);
     //drawChart();
-    window.location.hash = "finisher_ratio="+format(finisher_ratio*100)+'&j2_player='+format(j2_player*100)+'&from_oversea='+from_oversea;
+    if((format(finisher_ratio*100)==finisher_ratio_default)&&(format(gk_ratio*100)==gk_ratio_default)&&(format(j2_player*100)==j2_player_default)&&(from_oversea==from_oversea_default)){
+    }else{
+        window.location.hash = "finisher_ratio="+format(finisher_ratio*100)+"&gk_ratio="+format(gk_ratio*100)+'&j2_player='+format(j2_player*100)+'&from_oversea='+from_oversea;
+    }
 }
 
 function drawChart(){ 
@@ -264,6 +296,18 @@ $('#redraw').on('click',function(){
     $('#chart').remove();
     $('#chart-container').html('<p id="chart"></p>');
     $('#trade-detail').html('');
+    setChartData();
+    drawChart();
+});
+$('#set-default').on('click',function(){
+    $('#chart').remove();
+    $('#chart-container').html('<p id="chart"></p>');
+    $('#trade-detail').html('');
+    window.location.hash = '';
+    $('#finisher_ratio').val(80);
+    $('#gk_ratio').val(100);
+    $('#j2_player').val(33);
+    $('#from_oversea').val(2);
     setChartData();
     drawChart();
 });
