--- a/vapp/templates/index.html
+++ b/vapp/templates/index.html
@@ -120,7 +120,8 @@ $(document).ready(function() {
         }
     });
     
-    $.getJSON('{{url_for('vapp/trade_data')}}', function (result) {
+    //$.getJSON('{{url_for('vapp/trade_data')}}', function (result) {
+    $.getJSON('/media/trade_data.json', function (result) {
         trades.data = result;
         setChartData();
         drawChart();
