add hatena bookmark button

--- a/mainapp/templates/base.html
+++ b/mainapp/templates/base.html
@@ -104,6 +104,7 @@
                     <p>
                     <div class="g-plusone" data-size="tall" data-annotation="inline" data-width="300"></div>
                     </p>
+                    <a href="http://b.hatena.ne.jp/entry/{{request.url}}" class="hatena-bookmark-button" data-hatena-bookmark-layout="standard-balloon" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
                 </div>
                 <p>
                     &copy; 22foot Project, since 2014
